# timezone-shift

./: .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-new.md  README.md  RELEASE_NOTES.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
python/: pyproject.toml
python/zoned_time_lite/: __init__.py  dst_detector.py  formatter.py  time_converter.py  timezone_registry.py  types.py  utc_formatter.py  utils.py  validator.py  working_hours.py
src/: auto-functions.ts  cache-manager.ts  constants.ts  dst-detector.test.ts  dst-detector.ts  dst-transitions.test.ts  dst-transitions.ts  formatter.test.ts  formatter.ts  index.ts  performance.test.ts  runtime-registry.ts  time-converter.test.ts  time-converter.ts  timezone-detector.ts  timezone-registry.test.ts  timezone-registry.ts  types.ts  utc-formatter.test.ts  utc-formatter.ts  utils.ts  validation.test.ts  validator.test.ts  validator.ts  working-hours.test.ts  working-hours.ts
src/__tests__/: auto-detection-integration.test.ts  integration.test.ts  timezone-detector.test.ts
src/__tests__/unit/: auto-functions.test.ts  dst-detector.test.ts  dst-transitions.test.ts  formatter.test.ts  time-converter.test.ts  timezone-registry.test.ts  utc-formatter.test.ts  validation.test.ts  working-hours.test.ts
src/utils/: date-utils.ts  formatting.ts  validation.ts
test-data/: shared-test-data.json
